streaming cron-tasks and stream-calc-fta-subscription files added

--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -21,6 +21,7 @@ flux.kafka.subscribe = "ft-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "latest"
 
+flux.input-schema += {"field": "transaction_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 flux.input-schema += {"field": "transaction_time", "type": "string"}
 flux.input-schema += {"field": "served_party_msisdn", "type": "string"}
 flux.input-schema += {"field": "contract_type", "type": "string"}
@@ -32,8 +33,6 @@ flux.input-schema += {"field": "subscription_service", "type": "string"}
 flux.input-schema += {"field": "subscription_service_details", "type": "string"}
 flux.input-schema += {"field": "subscription_related_service", "type": "string"}
 flux.input-schema += {"field": "rated_amount", "type": "double"}
-flux.input-schema += {"field": "price_plan_code", "type": "string"}
-flux.input-schema += {"field": "main_balance_used", "type": "string"}
 flux.input-schema += {"field": "active_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 flux.input-schema += {"field": "active_time", "type": "string"}
 flux.input-schema += {"field": "expired_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
@@ -61,7 +60,6 @@ flux.input-schema += {"field": "amount_sms_inter", "type": "double"}
 flux.input-schema += {"field": "amount_sms_roaming", "type": "double"}
 flux.input-schema += {"field": "amount_data", "type": "double"}
 flux.input-schema += {"field": "amount_sva", "type": "double"}
-flux.input-schema += {"field": "transaction_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 
 flux.separator = ";"
 flux.temp-table-name = "in_ft_subscription"
@@ -86,4 +84,4 @@ flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMulti
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
-flux.jdbc.output-db-table = "daily_subs_activity"
+flux.jdbc.output-db-table = "DAILY_SUBS_ACTIVITY"
