streaming cron tasks file issues fixed

--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -11,15 +11,11 @@ HIVE_SCRIPT_LAUNCHER = "/bin/sh"
 PIG_SCRIPT_LAUNCHER = "/bin/sh"
 SQOOP_LAUNCHER="/bin/sh"
 
-
 env = "prod"
-
-
 
 //--###**************************************#####---
 //--###        CALCUL FT IN
 //--###**************************************#####---
-
 
 // Chargement FT IN ZTE SUBCRIPTION
 
@@ -33,8 +29,13 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.StreamingScriptLauncher"}
+      {"param" : "--master yarn --principal \"kafka/edge01.adcm.orangecm@OCMHDP.COM\""}
+      , {"param" : "--keytab \"/etc/security/keytabs/kafka.service.keytab\""}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files  /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf \"spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf\""}
+      , {"param" : "--conf \"spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf\""}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -48,8 +49,13 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.StreamingScriptLauncher"}
+      {"param" : "--master yarn --principal \"kafka/edge01.adcm.orangecm@OCMHDP.COM\""}
+      , {"param" : "--keytab \"/etc/security/keytabs/kafka.service.keytab\""}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files  /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf \"spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf\""}
+      , {"param" : "--conf \"spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf\""}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -63,99 +69,12 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.StreamingScriptLauncher"}
+      {"param" : "--master yarn --principal \"kafka/edge01.adcm.orangecm@OCMHDP.COM\""}
+      , {"param" : "--keytab \"/etc/security/keytabs/kafka.service.keytab\""}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files  /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf \"spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf\""}
+      , {"param" : "--conf \"spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf\""}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
-
-
-//// Chargement FT IN ZTE VOICE_SMS
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_VOICE_SMS",
-//    cron = "0 15 */2 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
-//    taskType = "STREAMING"
-//    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-//    timeout = "0 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.StreamingScriptLauncher"}
-//    ]
-//  }
-//
-//// Chargement FT IN ZTE VOICE_SMS_POST
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_VOICE_SMS_POST",
-//    cron = "0 45 */2 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
-//    taskType = "STREAMING"
-//    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-//    timeout = "0 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.StreamingScriptLauncher"}
-//    ]
-//  }
-//
-//
-//// Chargement FT IN ZTE DATA
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_DATA",
-//    cron = "0 30 */2 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "30 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
-//
-//// Chargement FT_A IN ZTE GPRS ACTIVITY
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
-//    cron = "0 35 */3 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "30 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
-//
-//// Chargement FT IN ZTE DATA POST
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_CRA_GPRS_POST",
-//    cron = "0 45 */2 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "50 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
-//
-//// Chargement FT_A IN ZTE GPRS ACTIVITY POST
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY_POST",
-//    cron = "0 50 */3 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity-post.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "50 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
