optim params added to streaming jobs and insert into stream_it_extract as post queries in load IT jobs

--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf
@@ -20,6 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_prod_spec_extract.hql"
+flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_prod_spec_extract.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
