--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
@@ -17,9 +17,11 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_price_plan_extract.hql"
+
+flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_price_plan_extract.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
