added original_file_name field to subscription streaming jobs

--- a/PROD/CONF/STREAMING/stream-calc-ft-01-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-01-subscription.conf
@@ -44,6 +44,10 @@ flux.input-schema += {"field": "active_date", "type": "timestamp", "format": "yy
 flux.input-schema += {"field": "expired_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 flux.input-schema += {"field": "provider_id", "type": "integer"}
 flux.input-schema += {"field": "prepay_flag", "type": "integer"}
+flux.input-schema += {"field": "payment_number", "type": "string"}
+flux.input-schema += {"field": "subscription_cost", "type": "integer"}
+flux.input-schema += {"field": "transaction_sn", "type": "integer"}
+flux.input-schema += {"field": "original_file_name", "type": "string"}
 
 flux.separator = "\\|"
 flux.temp-table-name = "in_zte_subscription_stream"
