--- a/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
@@ -51,6 +51,7 @@ flux.input-schema += {"field": "benefit_expire_date_list", "type": "string"}
 flux.input-schema += {"field": "benefit_balance_list", "type": "string"}
 flux.input-schema += {"field": "benefit_unit_list", "type": "string"}
 flux.input-schema += {"field": "service_list", "type": "string"}
+flux.input-schema += {"field": "original_file_name", "type": "string"}
 
 flux.separator = ";"
 flux.temp-table-name = "in_ft_01_subscription"
