--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -60,6 +60,7 @@ flux.input-schema += {"field": "amount_sms_inter", "type": "double"}
 flux.input-schema += {"field": "amount_sms_roaming", "type": "double"}
 flux.input-schema += {"field": "amount_data", "type": "double"}
 flux.input-schema += {"field": "amount_sva", "type": "double"}
+flux.input-schema += {"field": "original_file_name", "type": "string"}
 
 flux.separator = ";"
 flux.temp-table-name = "in_ft_subscription"
