added compute analytics as post-queries

--- a/PROD/CONF/IN_ZTE/IT/load-it-voice_sms.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-voice_sms.conf
@@ -17,9 +17,11 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/VOICE_SMS/insert_into_it_zte_voice_sms.hql"
+
+flux.post-exec-queries += "ANALYZE TABLE CDR.IT_ZTE_VOICE_SMS COMPUTE STATISTICS;"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
