--- a/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
+++ b/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
@@ -17,9 +17,11 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_it_cra_msc_huawei.hql"
+
+flux.post-exec-queries += "ANALYZE TABLE CDR.IT_CRA_MSC_HUAWEI COMPUTE STATISTICS;"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
