--- a/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
@@ -17,9 +17,11 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/MVAS/insert_into_it_smsc_mvas_a2p.hql"
+
+flux.post-exec-queries += "ANALYZE TABLE CDR.IT_SMSC_MVAS_A2P COMPUTE STATISTICS;"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
