count_check_file added to prequery_completude IN_ZTE and analyze compute statistic3 scheduled

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -407,3 +407,18 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+// COMPUTE STATISTICS
+crontasks +=
+  {
+    instanceId = "ANALYZE_COMPUTE_STATISTICS",
+    cron = "0 0 0 */1 * ?",
+    configFile = "/PROD/CONF/analyze_compute_statistics.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
