prequery completed updated with flux_type for check_file_count

--- a/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
@@ -36,4 +36,5 @@ flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_DATA_POST"
 flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_POST_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=20"
+flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
 
