--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -37,4 +37,5 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 //flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_AJUSTMENT"
 flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=20"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 //flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_CDR"
