--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -35,3 +35,4 @@ flux.hive.extra-conf += "--hivevar date_offset=90"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
 flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_SUBSCRIPTION"
 flux.hive.extra-conf += "--hivevar partition_name=CREATEDDATE"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
