--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
@@ -35,4 +35,5 @@ flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_VOICE_SMS_POST"
 flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_POST_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
+flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
 
