--- a/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
@@ -33,3 +33,4 @@ flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_ADJUSTMENT"
 flux.hive.extra-conf += "--hivevar partition_name=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
