--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -35,4 +35,5 @@ flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_DATA"
 flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=20"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 
