--- a/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf
@@ -31,3 +31,4 @@ flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_RECHARGE"
 flux.hive.extra-conf += "--hivevar partition_name=PAY_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_RECHARGE_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
