--- a/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
@@ -19,7 +19,7 @@ flux.input-file-format = "CSV"
 flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6667"
 flux.kafka.subscribe = "ft-01-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
-flux.kafka.startingOffsets = "latest"
+flux.kafka.startingOffsets = "earliest"
 
 flux.kafka.output-topic = "ft-subscription"
 flux.kafka.key-expression = "CAST(TRANSACTION_DATE AS STRING) AS key"
