--- a/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
@@ -20,7 +20,7 @@ flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6
 flux.kafka.subscribe = "ft-01-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
-flux.kafka.maxOffsetsPerTrigger = 1000
+flux.kafka.maxOffsetsPerTrigger = 1000000
 
 flux.kafka.output-topic = "ft-subscription"
 flux.kafka.key-expression = "CAST(TRANSACTION_DATE AS STRING) AS key"
