--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -628,19 +628,19 @@ crontasks +=
 
 // Chargement de IT-SMSC-MVAS-A2P-CHECKFILES
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SMSC_MVAS_A2P_CHECKFILES",
-    cron = "0 30 */2 * * ?",
-    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p-checkfiles.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_SMSC_MVAS_A2P_CHECKFILES",
+//    cron = "0 30 */2 * * ?",
+//    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p-checkfiles.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Archivage des données IN_ZTE + LOGS NIFI
 crontasks +=
