cron-tasks modified for ft_contract_snapshot and load_extract, insert checkfiles into received files modified

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -247,7 +247,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PROD_SPEC_EXTRACT",
-    cron = "0 05 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -262,7 +262,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PRICE_PLAN_EXTRACT",
-    cron = "0 05 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -277,7 +277,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACC_NBR_EXTRACT",
-    cron = "0 30 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acc-nbr-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -292,7 +292,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACCT_EXTRACT",
-    cron = "0 45 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acct-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -307,7 +307,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_BAL_EXTRACT",
-    cron = "0 05 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -322,11 +322,11 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_CUST_EXTRACT",
-    cron = "0 0 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-cust-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "20 minutes"
+    timeout = "25 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -337,11 +337,11 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
-    cron = "0 15 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
+    timeout = "25 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -352,11 +352,11 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_SUBS_EXTRACT",
-    cron = "0 05 */2 * * ?",
+    cron = "0 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-subs-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "20 minutes"
+    timeout = "25 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -368,7 +368,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_BAL_SNAP",
-    cron = "0 20 */3 * * ?",
+    cron = "0 20 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-snap.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
