--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
@@ -19,6 +19,8 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.post-query.execution.mode = "HIVE"
+
 flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_price_plan_extract.hql"
 
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_price_plan_extract.hql"
