--- a/PROD/CONF/OM/load-kpi-om-transactions.conf
+++ b/PROD/CONF/OM/load-kpi-om-transactions.conf
@@ -17,6 +17,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.post-query.execution.mode = "HIVE"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/prequery_completude.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/prequery_kpi_om_transactions.hql"
 
