--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -84,4 +84,4 @@ flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMulti
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
-flux.jdbc.output-db-table = "DAILY_SUBS_ACTIVITY"
+flux.jdbc.output-db-table = "daily_subs_activity"
