--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf
@@ -19,13 +19,21 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.post-query.execution.mode = "HIVE"
+flux.post-query.execution.mode = "JDBC"
+
+flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_price_plan_extract.hql"
+flux.exec-queries +="/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
+flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/truncate_stream_it_price_plan_extract.hql"
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_price_plan_extract.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
 flux.hive.extra-conf += "--hivevar date_offset=90"
+flux.hive.extra-conf += "--hivevar cdr_type=ZTE_PRICE_PLAN_EXTRACT"
+flux.hive.extra-conf += "--hivevar file_date_index=-12"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_PRICE_PLAN_EXTRACT"
