--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf
@@ -19,9 +19,17 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_zte_prod_extract.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
 flux.hive.extra-conf += "--hivevar date_offset=90"
+flux.hive.extra-conf += "--hivevar cdr_type=ZTE_PROD_EXTRACT"
+flux.hive.extra-conf += "--hivevar file_date_index=-12"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_PROD_EXTRACT"
+
