--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -608,14 +608,14 @@ crontasks +=
   }
 
 //--###**************************************#####---
-//--###        CHARGEMENT & CALCULS MVAS
+//--###        CHARGEMENT MVAS
 //--###**************************************#####---
 // Chargement de IT-SMSC-MVAS-A2P
 
 crontasks +=
   {
     instanceId = "LOAD_IT_SMSC_MVAS_A2P",
-    cron = "0 30 */2 * * ?",
+    cron = "0 0 * * * ?",
     configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
