--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -422,3 +422,38 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+
+
+//--###**************************************#####---
+//--###        CALCULS MVAS
+//--###**************************************#####---
+// FT MVAS
+crontasks +=
+  {
+    instanceId = "LOAD_FT_SMSC_TRANSACTION_A2P",
+    cron = "0 45 */2 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// FT A MVAS
+crontasks +=
+  {
+    instanceId = "LOAD_FT_QOS_SPECIAL_NUMBER",
+    cron = "0 15 */2 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-ft-qos-special-number.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
