--- a/PROD/CONF/IN_ZTE/IT/load-it-data.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-data.conf
@@ -19,10 +19,12 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/DATA/insert_into_it_zte_data.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/DATA/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=90"
-
