Switched Zebra configs to JDBC

--- a/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf
+++ b/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf
@@ -1,8 +1,3 @@
-//---***********************************************************---
-//------------ Load IT with cron manager -------------------
-// --------- Arnold Chuenffo 06-02-2019
-//---***********************************************************---
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -24,9 +19,12 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/ZEBRA/insert_into_it_zebra_checkfile.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/ZEBRA/insert_zebra_checkfile_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-flux.hive.extra-conf += "--hivevar date_offset=90"	
+flux.hive.extra-conf += "--hivevar date_offset=90"
