Switched Contract Snapshot configs to JDBC

--- a/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
@@ -17,8 +17,11 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_ft_contract_snapshot.hql"
 
+flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/insert_into_ft_contract_snapshot.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_contract_snapshot_activity.hql"
