--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -259,7 +259,24 @@ crontasks +=
     ]
   }
 
+//--###**************************************#####---
+//--###        CALCULS OM
+//--###**************************************#####---
 
+// Calcul KPI OM TRANSACTIONS
+crontasks +=
+  {
+    instanceId = "LOAD_KPI_OM_TRANSACTIONS",
+    cron = "0 30 */1 * * ?",
+    configFile = "/PROD/CONF/OM/load-kpi-om-transactions.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 //--###**************************************#####---
 //--###        CHARGEMENT & CALCULS MSC
@@ -316,7 +333,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_REFILL",
-    cron = "0 30 */2 * * ?",
+    cron = "0 30 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/FT/load-ft-refill.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -331,7 +348,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_SUBS_RETAIL_ZEBRA",
-    cron = "0 15 */2 * * ?",
+    cron = "0 15 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
