--- a/PROD/CONF/analyze_compute_statistics.conf
+++ b/PROD/CONF/analyze_compute_statistics.conf
@@ -17,5 +17,20 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_ACCT_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_BAL_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_CUST_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_ACC_NBR_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_PROD_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_SUBS_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_VOICE_SMS PARTITION(START_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_DATA PARTITION(START_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_CRA_MSC_HUAWEI PARTITION(CALLDATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_SMSC_MVAS_A2P PARTITION(WRITE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE CDR.FT_CONTRACT_SNAPSHOT PARTITION(EVENT_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+
 flux.exec-queries += "/PROD/SCRIPTS/compute_statistics_for_columns.hql"
 
