switched load-it-zte-profile ... transfer and load-it-om-commissions ... subscribers from hive exec mode to jdbc exec mode

--- a/PROD/CONF/OM/load-it-om-subscribers.conf
+++ b/PROD/CONF/OM/load-it-om-subscribers.conf
@@ -19,10 +19,17 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_it_om_subscribers.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
 flux.hive.extra-conf += "--hivevar date_offset=90"
+flux.hive.extra-conf += "--hivevar cdr_type=OM_SUBSCRIBERS"
+flux.hive.extra-conf += "--hivevar file_date_index=-12"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_OM_SUBSCRIBERS"
 
