--- a/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf
@@ -1,7 +1,3 @@
-//---***********************************************************---
-//------------ Load IT with cron manager -------------------
-//---***********************************************************---
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -23,11 +19,17 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/EMERGENCY_DATA/insert_into_it_zte_emergency_data.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=90"	
+flux.hive.extra-conf += "--hivevar cdr_type=ZTE_EMERGENCY_DATA_CDR"
+flux.hive.extra-conf += "--hivevar file_date_index=-12"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_EMERGENCY_DATA"
 
 
