change checkfiles and voice post flux to jdbc hive

--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf
@@ -19,7 +19,10 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/CHECK_FILE/insert_into_it_zte_check_file.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/CHECK_FILE/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
